[project]
name = "bus-mcp"
version = "0.1.0"
description = "MCP Server for Seattle Bus System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.0",
    "uvicorn>=0.23.1",
    "pydantic>=2.7.2",
    "starlette>=0.27.0",
]

[project.scripts]
adx-mcp-server = "bus_mcp.main:run_server"

[tool.hatch.build.targets.wheel]
packages = ["bus-mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"